tried to fix z-index, experimented with changing style elements

--- a/styles/home.css
+++ b/styles/home.css
@@ -3,31 +3,47 @@
     width: 25px;
     border-radius: 50%;
     background-image: linear-gradient( pink, magenta);
-    z-index: 1;
-    position: absolute;
-    transform: translateY(-100px);
+    transform: translateY(-50px);
     box-shadow: 2px -2px 25px  chartreuse;
+    z-index: 0;
 }
 
 .shell img {
-    width: 100%;
-   
+    width: 75%;
 }
+
+.shells.reveal.reveal img{
+    transform: translateY(-75px);
+}
+
 
 .shells {
     display: flex;
     flex-direction: row; 
-    z-index: 2;
+    width: fit-content;
+    align-items: center;
 }
 
 .shell {
     margin: 20px;
     padding: 20px;
-    align-items: center;
+    z-index: 200;
 }
 
 .results {
     color:aquamarine;
     margin: var(--gutter);
     font-family: monospace;
+}
+
+button {
+    background-color: chartreuse;
+    border-radius: 4%;
+    color:midnightblue;
+    font-family: monospace;
+    border: none;
+}
+
+section {
+    align-items: center;
 }
